--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -12,13 +12,4 @@
 </ul>
 
 <!-- details -->
-<section *ngIf="selected">
-  <h2>{{ selected.name | uppercase }} Details</h2>
-  <div><span>id: </span>{{ selected.id }}</div>
-  <div>
-    <label
-      >name:
-      <input [(ngModel)]="selected.name" placeholder="name" />
-    </label>
-  </div>
-</section>
+<app-hero-detail [propSelected]="selected"></app-hero-detail>
