--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<h1>{{ title }}</h1>
-
+<h1>{{title}}</h1>
 <app-heroes></app-heroes>
+<app-messages></app-messages>
 
 <!-- /* Router */ -->
 <router-outlet></router-outlet>
