--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>{{title}}</h1>
-<app-heroes></app-heroes>
-<app-messages></app-messages>
+<h1>{{ title }}</h1>
 
-<!-- /* Router */ -->
+<nav>
+  <a routerLink="/dashboard">Dashboard</a>
+  <a routerLink="/heroes">Heroes</a>
+</nav>
+<!-- Router -->
 <router-outlet></router-outlet>
+
+<app-messages></app-messages>
