--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -1,46 +1,51 @@
 /* HeroesComponent's private CSS styles */
 .heroes {
-  user-select: none;
-  -moz-user-select: none;
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
   width: 15em;
 }
 .heroes li {
-  cursor: pointer;
   position: relative;
-  left: 0;
-  background-color: #eee;
-  margin: 0.5em;
-  padding: 0.3em 0;
+  cursor: pointer;
+  background-color: #EEE;
+  margin: .5em;
+  padding: .3em 0;
   height: 1.6em;
   border-radius: 4px;
 }
+
 .heroes li:hover {
-  color: #607d8b;
-  background-color: #ddd;
-  left: 0.1em;
+  color: #607D8B;
+  background-color: #DDD;
+  left: .1em;
 }
-.heroes li.selected {
-  background-color: #cfd8dc;
-  color: white;
+
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
 }
-.heroes li.selected:hover {
-  background-color: #bbd8dc;
-  color: white;
+
+.heroes a:hover {
+  color:#607D8B;
 }
+
 .heroes .badge {
   display: inline-block;
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
+  background-color:#405061;
   line-height: 1em;
   position: relative;
   left: -1px;
   top: -4px;
   height: 1.8em;
-  margin-right: 0.8em;
+  min-width: 16px;
+  text-align: right;
+  margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
