--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="hero">
+<div *ngIf="hero">
   <h2>{{ hero.name | uppercase }} Details</h2>
   <div><span>id: </span>{{ hero.id }}</div>
   <div>
@@ -7,6 +7,6 @@
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
-</section>
-
-<button (click)="goBack()">go back</button>
+  <button (click)="goBack()">go back</button>
+  <button (click)="save()">save</button>
+</div>
